# socializer

./: [3~# Linux  [3~# Linux.pub  .dockerignore  .env.agentrouter  .env.example  .envv  .gitignore  .kilocodemodes  .pre-commit-config.yaml  .utcp_config.json  AGENTS.md  API_ENDPOINTS.md  BMAD_GEMINI_GUIDE_DE.md  BMAD_QUICK_START.md  CHANGELOG_CLI_IMPROVEMENTS.md  CLAUDE.md  CODE_MODE_MCP_SETUP.md  CONTINUE_PROMPT.txt  DEPLOY_INSTAGRAM.md  DOCUMENTATION.md  Dockerfile  Dockerfile.hf  ENGAGEMENT_DOCUMENTATION.md  GEMINI.md  INSTAGRAM_STATUS.md  LICENSE  PC_WORKFLOW.md  PERPLEX.md  README.md  README_SSH_CHAT.md  ROADMAP.md  TEST_BMAD_COMMANDS.md  TEST_FIXES_SUMMARY.md  TEST_RESULTS_SUMMARY.md  TIMEZONE_FIX.md  TY for the work could u givve me a quick  UI_SETUP_COMPLETE.md  WEB_UI_ACCESS.md  WORKFLOW.md  check_post_jobs.py  (+50 more)
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
conductor/: architecture_plan.md  gemini_cli_plan.md  open_source.md  product-guidelines.md  product.md  stack_consolidation.md  tech-stack.md  tracks.md
content/: WhatsApp.html
examples/: analyze_upload_dom.py  batch_engagement_example.py  instagram_ai_autonomous.py  instagram_check.py  instagram_check_session.py  instagram_engage_prefixes.py  instagram_engagement_demo.py  instagram_interactive.py  instagram_post.py  instagram_search.py  instagram_test_video.py  llm_race_demo.py  proxy_providers_demo.py  tiktok_auto.py  tiktok_check.py  tiktok_engagement_demo.py  tiktok_interactive.py  tiktok_post.py  tiktok_sb_login.py  tiktok_smart_auto.py  tiktok_trend_engagement.py  verify_ig_session.py
ig_session/: Local State
plans/: ssh-chat-kommandos.md  ssh-chat-projekt-setup.md  ssh-chat-step-by-step.md  ssh_chat_plan.md  ssh_setup_guide.md
radar/: AI_INSTAGRAM_README.md  CLI_AND_TESTING.md  INSTAGRAM_HARDENING.md  README.md  account_pool.py  account_scheduler.py  ai_decision_maker.py  api.py  auth_bridge.py  auth_bridge_ig.py  browser.py  captcha.py  cli.py  cli_accounts.py  cli_proxies.py  cli_sessions.py  config.py  content.py  db.py  element_selectors.py  engagement.py  engagement_models.py  extract_cookies.py  fingerprint_generator.py  human_behavior.py  ig_config.py  ig_selectors.py  (+15 more)
socializer-api/: .dockerignore  Dockerfile  pyproject.toml  seed_db.py  seed_socializer_api.py
socializer-api/app/: cli.py  database.py  main.py  models.py  scheduler.py  schemas.py
socializer-api/socializer_api/: __init__.py  app.py  cli_review.py  cli_schedule.py  db.py  settings.py
socializer-api/socializer_api (Copy 1)/socializer_api/: app.py  db.py  settings.py
socializer-api/socializer_api/scheduler/: policy.py  schedule.py
socializer-api/tests/: conftest.py  test_api.py  test_concurrency.py  test_db.py  test_integrity.py  test_scheduler.py
(+1844 files in other folders)
