[project]
name = "ai-agent-radar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "PyYAML>=6.0.1",
    "jinja2>=3.1.4",
    "typer>=0.12.3",
    "python-dateutil>=2.9.0.post0",
    "rich>=13.7.1",
]

[project.scripts]
radar = "radar.cli:app"

[tool.ruff]
line-length = 100
