[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "socializer-api"
version = "0.1.0"
description = "Minimal backend and scheduler for Socializer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.6.0",
]

[tool.setuptools]
packages = ["socializer_api"]
